# MasterProjectsExt

./: .gitignore  CHANGELOG.md  README.md  extension.js  functions.js  jsconfig.json  masterprojects-0.0.1.vsix  masterprojects-0.0.2.vsix  masterprojects-0.0.3.vsix  masterprojects-0.0.4.vsix  masterprojects-0.1.0.vsix  package-lock.json  package.json
forms/: MainForm.html
forms/css/: style.css
temp/: template.js
temp/MC12101/: CMakeLists.txt  cross-compile.cmake
temp/MC12101/src/: hello.cpp  nmc4_float.lds
temp/MC12705/: CMakeLists.txt  cross-compile.cmake  zxc.txt
temp/MC12705/src/: arm_part.elf  central_arm_skeleton.lds  simple.c
vscode/: 1.code-workspace
